Adjust process launching